# Generic-IPC-Handler

./: .gitignore  README.md  SConstruct  client.c  connection.h  ipc.cpp  ipc.h  meson.build  server.c  test_library.cpp
.github/scripts/: clang_format.sh  file_format.sh
.github/workflows/: linux_builds.yml  static_checks.yml  windows_builds.yml
example/: client.c  connection.h  server.c
src/: ipc.cpp  ipc.h  ipc_client.cpp  ipc_server.cpp  ipc_testing.cpp  linux_socket.cpp  linux_socket.h  socket_implementation.h  socket_posix.cpp  socket_windows.cpp  test_library.cpp  windows_socket.h
src/tests/: ipc_client.cpp  ipc_server.cpp  ipc_testing.cpp
tests/: ipc_client.cpp  ipc_server.cpp  ipc_testing.cpp  ipc_tests.cpp
